# cotrans

./: .dockerignore  .eslintignore  .eslintrc  .gitignore  Cargo.toml  Cross.toml  Dockerfile.gateway  README.md  README_CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: DEPLOY_INSTANCE.md  DEPLOY_WORKER.md
gateway/: Cargo.toml
gateway/src/: error.rs  images.rs  main.rs  mit_worker.rs  r2.rs  routes.rs
gateway/src/headers/: mod.rs  x_secret.rs
gateway/src/task/: db.rs  mod.rs  routes.rs  structs.rs  upload.rs
gateway/src/task/pixiv/: mod.rs  routes.rs  scrape.rs
gateway/src/task/twitter/: routes.rs  scrape.rs
img_hash/: Cargo.toml
img_hash/src/: dct.rs  fr.rs  lib.rs  traits.rs
img_hash/src/alg/: blockhash.rs  mod.rs
migrations/: 0000_init.sql  0001_source_size.sql  0002_source_size_trigger.sql
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20221209125916_init/: migration.sql
prisma/migrations/20221210082130_embed_text/: migration.sql
prisma/migrations/20221215041843_source_width_height/: migration.sql
prisma/migrations/20221215042233_source_drop_default_width_height/: migration.sql
prisma/migrations/20230413133722_no_unique_by_task_params/: migration.sql
prisma/migrations/20230413134712_unique_by_worker_revision/: migration.sql
prisma/migrations/20230504142603_gpt3_5/: migration.sql
proto/: gateway.mit.proto
proto-rs/: Cargo.toml  build.rs
proto-rs/src/: lib.rs
services/cotrans/: Cargo.toml
services/cotrans/src/: handlers.rs  main.rs  models.rs
services/image-query/: Cargo.toml
services/image-query/src/: context.rs  handlers.rs  main.rs  models.rs
services/image-query/src/services/: auto_translate_v1.rs  final_product_v1.rs  mod.rs
services/image-submit/: Cargo.toml
services/image-submit/src/: handlers.rs  main.rs  models.rs
services/inpainting_lama_v1/: inpainting.py  main.py  models.py
services/mask_refinement_v1/: main.py  models.py  text_mask_utils.py
services/models/: Cargo.toml
services/models/src/: lib.rs
services/ocr_ctc_v1/: main.py  models.py  ocr.py  utils.py
services/phash/: Cargo.toml
services/text_detection_v1/: detector.py  main.py  models.py  utils.py
services/textline_merge_v1/: main.py  models.py  textline_merge.py  utils.py
services/wasm/: Cargo.toml
services/wasm/src/: lib.rs
specs/: Cotrans.yaml  cotrans.yaml
types/: package.json  tsconfig.json
types/src/: index.ts
userscript/: package.json  rollup.config.js  tsconfig.json  vitest.config.ts
userscript/src/: banner-nsfw.js  banner-regular.js  main-nsfw.ts  main-regular.ts  main.ts  prefight.ts  shims.d.ts
userscript/src/composables/: storage.ts
userscript/src/eHentai/: gallery.ts  page.ts  settings.ts
userscript/src/i18n/: en-US.yml  index.ts  zh-CN.yml
userscript/src/misskey/: index.tsx
userscript/src/pixiv/: index.tsx  settings.tsx
userscript/src/settings/: index.tsx
userscript/src/style/: index.ts
userscript/src/twitter/: index.tsx  settings.tsx
userscript/src/utils/: core.ts  index.ts  storage.ts  twind.ts
web/: nuxt.config.ts  package.json
web-ext/: package.json  shim.d.ts  tsconfig.json  vite.config.ts
web-ext/src/: manifest.ts
web-ext/src/background/: contentScriptHMR.ts
web-ext/src/contentScripts/: index.ts
web-ext/src/contentScripts/views/: App.vue
web-ext/src/logic/: storage.ts
web-ext/src/options/: Options.vue
web-ext/src/popup/: Popup.vue
web/components/footer/: index.vue
web/components/home/: Upload.vue
web/components/nav/: index.vue
web/components/u/: Listbox.vue
web/layouts/: default.vue
web/pages/: index.vue  userscript.vue
wk-gateway/: buf.gen.yaml  build.config.ts  package.json  shims.d.ts  tsconfig.json  wrangler.domitworker.toml  wrangler.toml
wk-gateway/src/: db.ts  index.ts  types.ts
wk-gateway/src/mitWorker/: dObject.ts  id.ts  index.ts  ttl.ts
wk-gateway/src/task/: index.ts  upload.ts
wk-gateway/src/utils/: index.ts  memo.ts  png.ts
wk-image/: Cargo.toml  wrangler.toml
wk-image/src/: lib.rs
wkr2/: package.json  tsconfig.json  wrangler.toml
wkr2/src/: index.ts
