[package]
name = "cotrans-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
thiserror = "1.0.38"
once_cell = "1.17.1"
regex = "1.7.1"
cuid = "1.3.1"
serde = "1.0.152"
serde_json = "1.0.93"
quick-xml = "0.27.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.23"
hex = "0.4.3"
dashmap = "5.4.0"
ring = "0.16.20"
bytefmt = "0.1.7"
quanta = "0.10.1"

futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }

http = "0.2.9"
hyper = { version = "0.14.24", features = ["full"] }
axum = { version = "0.6.10", features = [
  "macros",
  "ws",
  "headers",
  "multipart",
] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["brotli", "gzip", "deflate"] }
prost = "0.11.8"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
axum-prometheus = "0.3.1"

image = "0.24.5"
image_hasher = "1.1.2"

cotrans-proto-rs = { path = "../proto-rs" }

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.5"
default-features = false
features = ["postgresql"]

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.45", features = ["vendored"] }
