[package]
name = "cotrans-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
thiserror = "1.0.40"
once_cell = "1.17.1"
regex = "1.7.3"
cuid = "1.3.1"
serde = "1.0.160"
serde_json = "1.0.96"
quick-xml = "0.28.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.24"
hex = "0.4.3"
dashmap = "5.4.0"
ring = "0.16.20"
bytefmt = "0.1.7"
quanta = "0.11.0"

futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }

http = "0.2.9"
hyper = { version = "0.14.26", features = ["full"] }
axum = { version = "0.6.15", features = [
  "macros",
  "ws",
  "headers",
  "multipart",
] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["brotli", "gzip", "deflate"] }
prost = "0.11.9"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
axum-prometheus = "0.3.2"

image = "0.24.6"
image_hasher = "1.1.2"

cotrans-proto-rs = { path = "../proto-rs" }

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.7"
default-features = false
features = ["postgresql"]

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.50", features = ["vendored"] }
