[package]
name = "cotrans-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
thiserror = "1.0.43"
once_cell = "1.18.0"
regex = "1.9.1"
cuid = "1.3.1"
serde = "1.0.171"
serde_json = "1.0.102"
quick-xml = "0.28.2"
chrono = "0.4.26"
hex = "0.4.3"
dashmap = "5.5.0"
ring = "0.16.20"
bytefmt = "0.1.7"
quanta = "0.11.1"
build-time = "0.1.3"

futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-axiom = "0.3"

url = "2.4.0"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
axum = { version = "0.6.18", features = [
  "macros",
  "ws",
  "headers",
  "multipart",
] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["brotli", "gzip", "deflate"] }
prost = "0.11.9"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
axum-prometheus = "0.3.3"

image = "0.24.6"
image_hasher = "1.2.0"

cotrans-proto-rs = { path = "../proto-rs" }

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"
default-features = false
features = ["postgresql"]

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }
