[package]
name = "cotrans-proto-rs"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"

[build-dependencies]
prost-build = "0.11.9"
