[package]
name = "cotrans-wk-image"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.18.0"
hex = "0.4.3"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
console_error_panic_hook = "0.1.7"
web-sys = { version = "=0.3.61", features = ["File", "Crypto", "SubtleCrypto"] }
worker-sys = "0.0.9"
worker = "0.0.17"

image = "0.24.6"
fast_image_resize = "2.7.3"
image_hasher = { version = "1.2.0", path = "../img_hash", features = [
  "nightly",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
